2008-12-02  Michael Moss  <mmoss@chromium.org>

Reviewed by Eric Seidel.

        - Fix http/tests/navigation/reload-subframe-*frame.html on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=20926

        Change 31264 fixed this on Mac (since moved to WebCore/loader/FrameLoader.cpp), but was never ported to Windows.

        * WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebFrameLoaderClient::loadURLIntoChild):

Canonical link: https://commits.webkit.org/31119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38912 268f45cc-cd09-0410-ab3c-d52691b4dbfc